# obscure

./: .gitignore  README.md  package-lock.json  package.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src/components/: DeletedNotesGrid.tsx  NoteEditor.tsx  SearchResults.tsx  Sidebar.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Index.tsx
root/: package-lock.json  package.json  tailwind.config.js
root/public/: emoji-manifest.json
root/src/: App.css  App.tsx  index.css  main.tsx
root/src-tauri/: Cargo.toml  tauri.conf.json
root/src-tauri/capabilities/: default.json
root/src-tauri/icons/: icon.icns
root/src-tauri/src/: lib.rs  main.rs
root/src/components/: ArchiveNotesGrid.tsx  CustomPasswordInput.tsx  CustomTitleBar.tsx  DeletedNotesGrid.tsx  HoldToConfirmButton.tsx  MatrixText.tsx  NoteEditor.tsx  ScrollProgressBar.tsx  Sidebar.tsx
root/src/components/ui/: alert-dialog.tsx  carousel.tsx  context-menu.tsx  dropdown-menu.tsx
root/src/lib/: slateToHtml.ts  slateToMarkdown.ts  theme.tsx  utils.ts
root/src/pages/: FirstSetup.tsx  Index.tsx  Login.tsx  NotFound.tsx  Orb.tsx
root/src/src/: index.css
root/src/styles/: scroll-thumb-only.css
