[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-log = "2"
aes-gcm = { version = "0.10.3", features = ["alloc", "std"] }
rand = "0.9.1"
pbkdf2 = "0.12.2"
base64 = "0.22.1"
sha2 = "0.10.9"
